오더 시스템 수업 중 수정 사항