@@ -18,6 +18,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -39,15 +40,17 @@ public class OrderingService {
         Member member =  memberRepository.findByEmail(principal).orElseThrow(() -> new EntityNotFoundException("구매자 정보를 찾을 수 없습니다."));
         Ordering ordering = Ordering.toEntity(member);
 
+
+//        캐스캐이딩 persist 사용하는게 더 좋음. ordering data 1개, orderDetail data n개
+
         for(OrderingCreateReqDto item : dto) {
             Product product = productRepository.findById(item.getProductId()).orElseThrow(() -> new EntityNotFoundException("상품 정보를 찾을 수 없습니다."));
-            if(product.getStockQuantity() < item.getProductCount()) {
-                throw new IllegalArgumentException("재고가 부족합니다.");
-            }
-            product.decreaseStockQuantity(item.getProductCount());
-
-            OrderingDetails orderingDetails = OrderingDetails.save(product, item.getProductCount());
-            ordering.addOrderingDetails(orderingDetails);
+            OrderingDetails orderDetail = OrderingDetails.builder()
+                    .ordering(ordering)
+                    .product(product)
+                    .quantity(item.getProductCount())
+                    .build();
+            ordering.getOrderingDetails().add(orderDetail);
         }
 
         orderingRepository.save(ordering);
@@ -55,19 +58,21 @@ public class OrderingService {
     }
 
     public List<OrderingListResDto> orderingList() {
-        List<Ordering> orders = orderingRepository.findAll();
-        return orders.stream().map(OrderingListResDto::fromEntity).toList();
+//        List<Ordering> orders = orderingRepository.findAll();
+//        return orders.stream().map(OrderingListResDto::fromEntity).toList();
+        return orderingRepository.findAll().stream().map(OrderingListResDto::fromEntity).toList();
     }
 
     public List<OrderingMyListResDto> myOrderList(String principal) {
         Member member =  memberRepository.findByEmail(principal).orElseThrow(() -> new EntityNotFoundException("구매자 정보를 찾을 수 없습니다."));
-//        Ordering ordering = Ordering.toEntity(member);
 
-        List<Ordering> orderList =
-                orderingRepository.findByMemberId(member.getId());
-        return orderList.stream()
-                .map(OrderingMyListResDto::fromEntity)
-                .toList();
+//        List<Ordering> orderList =
+//                orderingRepository.findByMemberId(member.getId());
+//        return orderList.stream()
+//                .map(OrderingMyListResDto::fromEntity)
+//                .toList();
+
+        return orderingRepository.findAllByMember(member).stream().map( o-> OrderingMyListResDto.fromEntity(o)).collect(Collectors.toList());
     }
 
 
